Fix spacing in Main

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,7 +1,6 @@
 @import "../../styles/mixins.scss";
 
 .form {
-  margin-top: 20px;
   display: grid;
   gap: 35px;
   width: 320px;
