--- a/src/components/Payments/Index.module.scss
+++ b/src/components/Payments/Index.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   width: 100%;
-  grid-template: 75px 70px auto / 1fr auto;
+  grid-template: 60px 60px auto / 1fr auto;
   grid-template-areas:
     "section-title mab"
     "schedule schedule"
